# tree_of_scientists

./: .gitignore  Aesoning.hs  CHANGELOG.md  Commander.hs  Dumped.hs  EzHash.hs  KdTest.hs  Kdtree.hs  LshMinhash.hs  Main.hs  Muhtr.hs  Profil.hs  Quad.hs  RTree.hs  RangeTree.hs  benchmarks.html  data.csv  dataworse.csv  doublewordids.csv  dumpedTrees.csv  jaccardsFull.csv  kdjs.json  kdtree.hs  links.csv  myBands.csv  myHashes.csv  myprofile.txt  namesasints.csv  prot.py  quadjs.json  rangjs.json  report.md  rtrjs.json  scrapdata.csv  sorteddata.csv  tree-of-scientists.cabal  treescience.norg  wordSets.csv
scraping/: List of computer scientists - Wikipedia.csv  educated.txt  scrap.py  scrapdata.txt  scrapedu.py  surawa.txt  surawa2.txt
