cabal-version:      2.4
name:               tree-of-scientists
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Implementarion of data structures for range querries

-- A longer description of the package.
-- description: Project for multidimentional data structures class

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: GPLv3
author:             cyberseihis
maintainer:         mcraftdm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable profil
    main-is: Profil.hs
    ghc-options: -O2 -threaded -prof "-with-rtsopts=-N -p"
    other-modules: Kdtree, KdTest, Quad, RangeTree, RTree, LshMinhash, Commander, Dumped
    build-depends:    
        base , containers, QuickCheck, data-hash, split, unordered-containers
    default-language: Haskell2010

executable demo
    main-is: Main.hs
    other-modules: Kdtree, KdTest, Quad, RangeTree, RTree, LshMinhash, Commander, Dumped
    build-depends:    
        base , containers, QuickCheck, data-hash, split, unordered-containers
    ghc-options: -O2 -threaded "-with-rtsopts=-N"
    default-language: Haskell2010
